Fix spacing and wording

--- a/application.css
+++ b/application.css
@@ -11,7 +11,7 @@ body{
 .title {
   background-color: #dcdcef;
   padding: 1%;
-  font-size: 1.8vw;
+  font-size: 2.5vw;
   margin-top: 0;
   position: relative;
   border-bottom: 1vw solid #2b2d59;
@@ -42,9 +42,8 @@ body{
   font-size: 4vw;
 }
 
-ul li{
+ul{
   list-style: none;
-  margin: .3vw;
-  padding-left: 8vw;
+  padding: 6vw;
   text-align: left;
 }
